# Sinodragon-cpp

./: CMakeLists.txt  README.md
configs/: Presets_info.toml  config-compact.toml  config.toml  config_preset_info.md  example.cfg  example_keycodes.csv  example_layout.csv
include/keyboard_configurator/: config_loader.hpp  config_watcher.hpp  configurator_cli.hpp  device_transport.hpp  doom_fire_preset.hpp  effect_engine.hpp  hidapi_transport.hpp  hyprland_watcher.hpp  key_activity.hpp  key_activity_watcher.hpp  key_color_frame.hpp  key_map_preset.hpp  keyboard_model.hpp  liquid_plasma_preset.hpp  logging_transport.hpp  preset.hpp  preset_registry.hpp  rainbow_wave_preset.hpp  reaction_diffusion_preset.hpp  reactive_ripple_preset.hpp  retry_helper.hpp  shortcut_watcher.hpp  smoke_preset.hpp  snake_preset.hpp  space_colonization_preset.hpp  star_matrix_preset.hpp  static_color_preset.hpp  types.hpp
src/: config_loader.cpp  configurator_cli.cpp  doom_fire_preset.cpp  effect_engine.cpp  hidapi_transport.cpp  hyprland_watcher.cpp  key_activity.cpp  key_activity_watcher.cpp  key_color_frame.cpp  key_map_preset.cpp  keyboard_model.cpp  liquid_plasma_preset.cpp  logging_transport.cpp  main.cpp  preset_registry.cpp  rainbow_wave_preset.cpp  reaction_diffusion_preset.cpp  reactive_ripple_preset.cpp  shortcut_watcher.cpp  smoke_preset.cpp  snake_preset.cpp  space_colonization_preset.cpp  star_matrix_preset.cpp  static_color_preset.cpp
